--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 loans:
-  message: "Hey, welcome to EazyBank loans related production APIs "
+  message: "Hey, welcome to EazyBank loans related change prod APIs "
   contactDetails:
     name: "Pelias Sudhir - Product Owner"
     email: "test@eazybank.com"
