--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -1,11 +1,13 @@
- server:
+
+server:
   port: 8070
 
 eureka:
   instance:
     hostname: localhost
+
   client:
-    fetchRegistry: false
-    registerWithEureka: false
-    serviceUrl:
+    fetch-registry: false
+    register-with-eureka: false
+    service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
