--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -4,9 +4,8 @@ server:
 eureka:
   instance:
     hostname: localhost
-
   client:
-    fetch-registry: false
-    register-with-eureka: false
-    service-url:
+    fetchRegistry: false
+    registerWithEureka: false
+    serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
